utilities/Sol/modules/grammars/language/src/test/resources/cocos/valid/CircularDependencyParent.lc
/*
 * (c) https://github.com/MontiCore/monticore
 */
package valid

language CircularDependencyParent {

}
