utilities/Sol/modules/grammars/language/src/test/resources/cocos/invalid/CircularDependency.lc
/*
 * (c) https://github.com/MontiCore/monticore
 */
package invalid

language CircularDependency extends CircularDependencyParent {

}
